# hypr-xdisplay

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  feature_request.md
src/: android.rs  display_manager.rs  event_listener.rs  lib.rs  main.rs  network_display.rs  recorder.rs  screenshot.rs  settings.rs  wireless.rs
src/display_manager/: mod.rs  monitor_control.rs  monitor_types.rs
src/network_display/: device_discovery.rs  mod.rs  protocol_manager.rs  protocol_types.rs
src/ui/: main_window.rs  mod.rs  monitor_arrangement.rs  network_settings.rs  recording_controls.rs  screenshot_controls.rs  status_polling.rs  toasts.rs
