[package]
name = "hypr-xdisplay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk = { version = "0.8", package = "gtk4" }
libadwaita = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
nix = { version = "0.29", features = ["signal"] }
config = { version = "0.14", features = ["toml"] }
glib = "0.18"
